--- a/1102.1313/LNPnotes.tex
+++ b/1102.1313/LNPnotes.tex
@@ -174,7 +174,7 @@ A \boldemph{category} $\CC$ consists of:
     \[ c_{A,B,C} : \CC (A, B) \times \CC (B, C) \longrightarrow \CC (A, C)\,. \]
   $c_{A, B, C}(f, g)$ is written \ $g\circ\!f$ \ (or sometimes $f ; g$). Diagrammatically:
   \[ A \stackrel{f}{\longrightarrow} B \stackrel{g}{\longrightarrow} C \]
-  \item For each object $A$, an \boldemph{identity} arrow $\id[A]:A\rightarrow A$.
+  \item For each object $A$, an \boldemph{identity} arrow $\id[A]:A\rarr A$.
 \end{itemize}
 The above must satisfy the following axioms.
 \[ h \circ (g \circ f) = (h \circ g) \circ f \,,\qquad f \circ \id[A] = f = \id[B] \circ f\,. \]
@@ -226,8 +226,8 @@ Before we proceed to our first examples of categories, we shall present some bac
 A \emph{partial order} is a structure $(P, \leq )$ where $P$ is a set and $\leq$ is a binary relation on $P$ satisfying:
 \begin{itemize}
 \item[$\bullet$] $x \leq x$ \hfill(Reflexivity)
-\item[$\bullet$] $x \leq y \; \wedge y \leq x \;\; \Rightarrow \;\; x = y$  \hfill(Antisymmetry)
-\item[$\bullet$] $x \leq y \; \wedge \; y \leq z \;\; \Rightarrow \;\; x \leq z$  \hfill(Transitivity)
+\item[$\bullet$] $x \leq y \; \wedge y \leq x \;\; \rarr \;\; x = y$  \hfill(Antisymmetry)
+\item[$\bullet$] $x \leq y \; \wedge \; y \leq z \;\; \rarr \;\; x \leq z$  \hfill(Transitivity)
 \end{itemize}
 For example, $(\mathbb{R}, \leq )$ and $(\mathcal{P}(X), \subseteq )$ are partial orders, and so are strings with the sub-string relation.
 
@@ -271,7 +271,7 @@ Let us now see some first examples of  categories.
 \item {\textbf{Pos} (partially ordered sets and monotone functions)}
 \item {\textbf{Top} (topological spaces and continuous functions)}
 \end{itemize}
-\item \Rel: objects are sets, arrows $R : X \rightarrow Y$ are \emph{relations} $R \subseteq X \times Y$.
+\item \Rel: objects are sets, arrows $R : X \rarr Y$ are \emph{relations} $R \subseteq X \times Y$.
 Relational composition:
 \[ R;S (x, z) \;\; \Longleftrightarrow \;\; \exists y. \, R(x, y) \; \wedge \; S(y, z) \]
 \item Let $k$ be a field (for example, the real or complex numbers). Consider the following category $\text{\textbf{Mat}}_{k}$. The objects are natural numbers. A morphism $M : \mathbf{n} \rarr \mathbf{m}$ is an $\mathbf{n} \times \mathbf{m}$ matrix with entries in $k$. Composition is matrix multiplication, and the identity on $\mathbf{n}$ is the $\mathbf{n} \times \mathbf{n}$ diagonal matrix.
@@ -362,7 +362,7 @@ If $P$ is a preorder, for example $(\mathbb{R}, \leq )$, describe $\op{P}$ expli
 Let $\CC$ be a category. Suppose that we are given collections
 \[ \Ob(\DD)\subseteq \Ob(\CC)\,,\quad\forall A,B\in \Ob(\DD).\; \DD(A,B)\subseteq\CC(A,B)\,. \]
 We say that $\DD$ is a \boldemph{subcategory} of $\CC$ if
-\[ A \in \Ob(\DD) \; \Rightarrow \; \id[A] \in \DD(A, A), \quad f \in \DD(A, B), g  \in \DD(B, C) \; \Rightarrow \; g \circ f \in \DD(A, C) \, , \]
+\[ A \in \Ob(\DD) \; \rarr \; \id[A] \in \DD(A, A), \quad f \in \DD(A, B), g  \in \DD(B, C) \; \rarr \; g \circ f \in \DD(A, C) \, , \]
 and hence $\DD$ itself is a category.
 In particular, $\DD$ is:
 \begin{itemize}
@@ -571,14 +571,14 @@ For any triple $A\overset{\pi_1}{\llarr}A\times B\overset{\pi_2}{\lrarr}B$ the f
 \end{myproposition}
 \proof
 %
-For (I)$\Rightarrow$(II), take any $h:C\rarr A\times B$\,; we need to show $h=\ang{\pi_1\circ h,\pi_2\circ h}$. We have
+For (I)$\rarr$(II), take any $h:C\rarr A\times B$\,; we need to show $h=\ang{\pi_1\circ h,\pi_2\circ h}$. We have
 \[ \xymatrix{A & C\ar[l]_-{\pi_1\circ h}\ar[r]^-{\pi_2\circ h} & B} \]
 and hence, by (I), there exists unique $k:C\rarr A\times B$ such that
 \[ \pi_1\circ k= \pi_1\circ h \qd\land\qd \pi_2\circ k= \pi_2\circ h \tag{$*$}\]
 Note now that ($*$) holds both for $k:=h$ and $k:=\ang{\pi_1\circ h,\pi_2\circ h}$, the latter because of (I). Hence, $h=\ang{\pi_1\circ h,\pi_2\circ
 h}$.
 \\
-For (II)$\Rightarrow$(I), take any triple $A\overset{f}{\llarr}C\overset{g}{\lrarr}B$. By (II), we have that there exists an arrow $\ang{f,g}:C\rarr
+For (II)$\rarr$(I), take any triple $A\overset{f}{\llarr}C\overset{g}{\lrarr}B$. By (II), we have that there exists an arrow $\ang{f,g}:C\rarr
 A\times B$ such that $\pi_1\circ\ang{f,g}=f$ and $\pi_2\circ\ang{f,g}=g$. We need to show it is the unique such. Let $k:C\rarr A\times B$ s.t.
 \[ \pi_1\circ k= f \qd\land\qd \pi_2\circ k= g \]
 Then, by (II),
@@ -1369,7 +1369,7 @@ yielding the \emph{ceiling function}. Thus:
 This has a right adjoint $[R] : \pow(Y) \lrarr \pow(X)$:
 \[ S \subseteq [R]T \;\; \Longleftrightarrow \;\; f_{R}(S) \subseteq T\,. \]
 The definition of $[R]$ which satisfies this condition is:
-\[ [R]T := \{ x \in X \mid \forall y \in Y. \, xRy \; \Rightarrow \; y \in T \}\,. \]
+\[ [R]T := \{ x \in X \mid \forall y \in Y. \, xRy \; \rarr \; y \in T \}\,. \]
 If we consider a set of \emph{worlds} $W$ with an \emph{accessibility relation} $R \subseteq W \times W$ as in Kripke semantics for modal logic, we see
 that $[R]$ gives the usual Kripke semantics for the modal operator $\Box$, seen as a propositional operator mapping the set of worlds satisfied by a
 formula $\phi$ to the set of worlds satisfied by $\Box \phi$.
@@ -1386,7 +1386,7 @@ $S \subseteq X$, $T \subseteq Y$:
 How can we define $\forall(f)$ and $\exists(f)$ explicitly so as to fulfil these defining conditions? --\,As follows:
 \begin{align*}
 \exists(f)(S) &:= \{ y \in Y \mid \exists x \in X. \, f(x) = y \; \wedge \; x \in S \}\,,  \\
-\forall(f)(S) &:= \{ y \in Y \mid \forall x \in X. \, f(x) = y \; \Rightarrow \; x \in S \}\,.
+\forall(f)(S) &:= \{ y \in Y \mid \forall x \in X. \, f(x) = y \; \rarr \; x \in S \}\,.
 \end{align*}
 %
 If $R \subseteq X \times Y$, which we write in logical notation as $R(x, y)$, and we take the projection function $\pi_{1} : X \times Y \lrarr X$,
@@ -1700,7 +1700,7 @@ Show that $\CC$ has exponentials iff, for every $A,B,C\in\Ob(\CC)$, there is an 
 natural in $C$.
 \end{myexercise}
 
-\begin{notation} The notation  $B^A$ for exponential objects is standard in the category theory literature. For our purposes, however, it will be more convenient to write $A \Rightarrow B$.
+\begin{notation} The notation  $B^A$ for exponential objects is standard in the category theory literature. For our purposes, however, it will be more convenient to write $A \rarr B$.
 \end{notation}
 Exponentials bring us to another fundamental notion, this time for understanding functional types, models of $\lambda$-calculus, and the structure of
 proofs.
@@ -1712,11 +1712,11 @@ A category with a terminal object, products and exponentials is called a \boldem
 For example, $\Set$ is a CCC. Another class of examples are \emph{Boolean algebras}, seen as categories:
 \begin{itemize}
   \item Products are given by conjunctions $A \wedge B$. We define exponentials as \emph{implications}:
-    \[ A \Rightarrow B \; := \; \neg A \vee B\,. \]
+    \[ A \rarr B \; := \; \neg A \vee B\,. \]
   \item Evaluation is just \emph{Modus Ponens},
-    \[ (A \Rightarrow B) \wedge A \;\leq\; B \]
+    \[ (A \rarr B) \wedge A \;\leq\; B \]
     while couniversality is the \emph{Deduction Theorem},
-    \[ C \wedge A \;\leq\; B \;\; \Longleftrightarrow \;\; C \;\leq\; A \Rightarrow B\,. \]
+    \[ C \wedge A \;\leq\; B \;\; \Longleftrightarrow \;\; C \;\leq\; A \rarr B\,. \]
 \end{itemize}
 
 \subsection{Exercises}
@@ -2010,7 +2010,7 @@ Let us assume a set of \emph{base types}, ranged over by $b$. The \boldemph{simp
 \begin{align*}
 &\text{Type} &&
 %B \;\; &::= \;\; \iota \; \mid \; \ldots && \text{base types}\\
-\mathrm{TY}\ni\, T,U \; ::= \; b \; \mid \; T \rightarrow U \; \mid \; T \times U %&& \text{general types}
+\mathrm{TY}\ni\, T,U \; ::= \; b \; \mid \; T \rarr U \; \mid \; T \times U %&& \text{general types}
 \\[1.5mm]
 &\text{Term} && \mathrm{TE}\ni\,t,u\; ::= \; x \; \mid \; {t\,u} \;\mid\; {\lambda x.\, t} \;\mid\; \ang{t,u} \;\mid\; \pi_1u \;\mid\; \pi_2u \\[1.5mm]
 &\text{Typing context} && \Gamma \;::=\; \varnothing\; \mid x : T,\Gamma \qquad(x\text{ does not appear in }\Gamma)
@@ -2028,10 +2028,10 @@ which is to be understood as the assertion that term $t$ has the type $T$ under 
 \\&&\\\hline\hline&&\\
 \infer{\Gamma , x:T \vdash  x:T}{} & %
 \infer{\Gamma \vdash \langle t, u \rangle : T \times U}{\Gamma \vdash t:T \qquad  \Gamma \vdash u:U} &%
-\infer{\Gamma \vdash \lambda x. \, t: U \rightarrow T}{\Gamma , x:U \vdash t:T}
+\infer{\Gamma \vdash \lambda x. \, t: U \rarr T}{\Gamma , x:U \vdash t:T}
 \\&&\\&&\\&
 \infer{\Gamma \vdash \pi_1 v : T}{\Gamma \vdash v : T \times U} &%
-\infer{\Gamma \vdash t\,u : T}{\Gamma \vdash t : U \rightarrow T \qquad \Gamma  \vdash u:U}
+\infer{\Gamma \vdash t\,u : T}{\Gamma \vdash t : U \rarr T \qquad \Gamma  \vdash u:U}
 \\&&\\&&\\&
 \infer{\Gamma \vdash \pi_2 v : U}{\Gamma \vdash v : T \times U}
 \\&&\\
@@ -2043,8 +2043,8 @@ Note that contexts are sets, and so $x : T,\Gamma$ stands for $\{x:T\}\cup\Gamma
 From the definition of types we see that the simply-typed $\lambda$-calculus is a calculus of functions and products.
 For example:
 \[\begin{array}{c@{\quad}l}
- b \rightarrow b \rightarrow b & \mbox{first-order function type} \\[5pt]
-(b \rightarrow b ) \rightarrow b & \mbox{second-order function type}
+ b \rarr b \rarr b & \mbox{first-order function type} \\[5pt]
+(b \rarr b ) \rarr b & \mbox{second-order function type}
 \end{array}\]
 
 %We say that a term $t$ \boldemph{is typable} iff there is a context $\Gamma$ and a type $T$ such that $\Gamma\vdash t:T$ is \emph{derivable}.
@@ -2060,13 +2060,13 @@ Can you type the following terms?
 \end{myexercise}
 %\begin{myexercise}[Cut]
 %    Show that $\Cut$ is admissible in the typing system of the simply-typed $\lambda$-calculus:
-%    Show then that, for any typed term $\Gamma\vdash t:T$, if $t\rightarrow_\beta t'$ then $\Gamma\vdash t':T$ is typed.
+%    Show then that, for any typed term $\Gamma\vdash t:T$, if $t\rarr_\beta t'$ then $\Gamma\vdash t':T$ is typed.
 %\end{myexercise}
 %
 %For example,
 %\begin{align*}
-%&\iota \rightarrow \iota \rightarrow \iota    \qd[3]\mbox{\it first-order function type} \\
-%&(\iota \rightarrow \iota ) \rightarrow \iota \qd[2]\mbox{\it second-order function type}
+%&\iota \rarr \iota \rarr \iota    \qd[3]\mbox{\it first-order function type} \\
+%&(\iota \rarr \iota ) \rarr \iota \qd[2]\mbox{\it second-order function type}
 %\end{align*}
 \newlines{1}
 We proceed to the rules for reduction and conversion. These are given as in the untyped case, with the addition of $\eta$-rules, which are essentially
@@ -2103,9 +2103,9 @@ no more reductions are applicable.
 %
 Formally, a $\lambda$-term is called a \boldemph{redex} if it is in one of forms of the left-hand-side of the $\beta$-reduction rules,
 %\[ \begin{array}{lcl}
-%(\lambda x. \, t ) u & \rightarrow & t[u/x] \\
-%\pi_1 \langle t, u \rangle & \rightarrow & t \\
-%\pi_2 \langle t, u \rangle & \rightarrow & u
+%(\lambda x. \, t ) u & \rarr & t[u/x] \\
+%\pi_1 \langle t, u \rangle & \rarr & t \\
+%\pi_2 \langle t, u \rangle & \rarr & u
 %\end{array} \]
 and therefore $\beta$-reduction can be applied to it. A term is in \boldemph{normal form} if it contains no redexes.
 In the light of the correspondence presented in the next paragraph, a term in normal form corresponds to a proof in which all lemmas have been eliminated.
@@ -2123,12 +2123,12 @@ that reduction to normal form has enormous (\emph{non-elementary}) complexity.
 \paragraph{The correspondence between Logic and Computation} Comparing the following two systems,
 \[
   \fbox{Natural Deduction System for $\wedge$,$\supset$}\text{ \ vs \ }
-  \fbox{Simply-Typed $\lambda$-calculus for $\times$,$\rightarrow$}
+  \fbox{Simply-Typed $\lambda$-calculus for $\times$,$\rarr$}
 \]
 we notice that if we equate
 \[ \begin{array}{lcl}
 \wedge & \equiv & \times \\
-\supset & \equiv & \rightarrow
+\supset & \equiv & \rarr
 \end{array} \]
 then they are the same! This is the Logic--Computation part of the Curry-Howard correspondence (sometimes: ``Curry-Howard isomorphism"). It works on three levels:
 \begin{center}
@@ -2160,7 +2160,7 @@ logic:
 \item A proof of an implication $A \supset B$ is a procedure which transforms any proof of $A$ into a proof of $B$.
 \item A proof of $A \wedge B$ is a pair consisting of a proof of $A$  and a proof of $B$.
 \end{itemize}
-These readings motivate identifying $A \wedge B$ with $A \times B$, and $A \supset B$ with $A \rightarrow B$.
+These readings motivate identifying $A \wedge B$ with $A \times B$, and $A \supset B$ with $A \rarr B$.
 %
 Moreover, these ideas have strong connections to computing. The $\lambda$-calculus is a `pure' version of functional programming languages such as
 Haskell and SML. So we get a reading of:
@@ -2193,10 +2193,10 @@ The correspondence is depicted in the next table.
 \\&&\\
 & \infer[\AndEr]{\Gamma \vdash B}{\Gamma \vdash A \wedge B} & \infer{\pi_{2}\circ f : \Gamma \longrightarrow B}{f : \Gamma \longrightarrow A \times B}
 \\&&\\\hline&&\\
-\textbf{Implication} & \infer[\ImpI]{\Gamma\vdash A\supset B}{\Gamma,A\vdash B} & \infer{\Lambda(f):\Gamma\longrightarrow(A\Rightarrow B)}{f:\Gamma
+\textbf{Implication} & \infer[\ImpI]{\Gamma\vdash A\supset B}{\Gamma,A\vdash B} & \infer{\Lambda(f):\Gamma\longrightarrow(A\rarr B)}{f:\Gamma
 \times A\longrightarrow B} \\&&\\
 & \infer[\ImpE]{\Gamma\vdash B}{\Gamma\vdash A\supset B \quad\Gamma\vdash A} & \infer{\App[A,B]\circ\langle f,g\rangle:\Gamma\longrightarrow B}{f :
-\Gamma \longrightarrow (A \Rightarrow B) \quad g : \Gamma \rarr A}\\&&\\
+\Gamma \longrightarrow (A \rarr B) \quad g : \Gamma \rarr A}\\&&\\
 \end{array}$}\captionof{table}{Correspondence between Logic and Categories.}
 \end{center}
 %
@@ -2225,7 +2225,7 @@ The translation if given by the function $\trn{\uscore\,}$ defined below (``sema
 \begin{mydefinition}[{Semantic translation}]\label{d:SemTr}
 Let $\CC$ be a CCC and suppose we are given an assignment of an object $\tilde{b}$ to each base type $b$. Then, the translation is defined recursively
 on types by:
-\[ \trn{b}:=\tilde{b} \,,\qd \trn{T\times U}:=\trn{T}\times\trn{U} \,,\qd \trn{T\rarr U}:=\trn{T}\Rightarrow\trn{U}\,, \]
+\[ \trn{b}:=\tilde{b} \,,\qd \trn{T\times U}:=\trn{T}\times\trn{U} \,,\qd \trn{T\rarr U}:=\trn{T}\rarr\trn{U}\,, \]
 and on typed terms by:
 \[\begin{array}{c}
 \infer{\trn{\Gamma,x:T\vdash x:T} := \pi_2:\trn{\Gamma}\times\trn{T}\lrarr\trn{T}}{}
@@ -2461,8 +2461,8 @@ This means that our term model is \emph{complete}.
     \end{itemize}
     In each case, give the corresponding $\lambda$-term and the corresponding arrow in a CCC $\CC$.
   \item For each of the following $\lambda$-terms, find a type for it. Try to find the `most general' type, built from `type variables' $\alpha$,
-    $\beta$ etc. For example, the most general type for the identity $\lambda x. \, x$ is $\alpha \rightarrow \alpha$.
-%    (It is `most general' in the sense that any other type you could give this term would be of the form $T \rightarrow T$,
+    $\beta$ etc. For example, the most general type for the identity $\lambda x. \, x$ is $\alpha \rarr \alpha$.
+%    (It is `most general' in the sense that any other type you could give this term would be of the form $T \rarr T$,
 %    and hence arise by substituting $T$ for $\alpha$. Of course, any type variable would do in place of $\alpha$.)
     In each case, give the derivation of the type for this term (where you may assume that types can be
     built up from type variables as well as base types).
