--- a/scott-1980/scott-main.tex
+++ b/scott-1980/scott-main.tex
@@ -99,8 +99,8 @@ bookmarksopenlevel=10
 {\centerline
 {\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday\footnote{
 This is a remake of the paper {\it Relating Theories of the 
-$\l$-Calculus} originally published in In R. Hindley and J. Seldin, 
-editors, To H.B. Curry: Essays in Combinarory Logic, Lambda Calculus and Formalisms. 
+$\l$-Calculus} originally published in R. Hindley and J. Seldin, 
+editors, {\it To H.B. Curry: Essays in Combinatory Logic, Lambda Calculus and Formalisms}. 
 Academic Press, 1980. This file was created in May 2021.}}}
 \bigskip
 
