--- a/lambek-1980-ccc/lambek-main.tex
+++ b/lambek-1980-ccc/lambek-main.tex
@@ -1,4 +1,4 @@
-% !TEX root = lambek-1980-ccc-pal-eu.tex
+% !TEX root = lambek-1980-ccc-pal.tex
 %\usepackage[dotinlabels]{titletoc}
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
@@ -54,7 +54,7 @@ bookmarksopenlevel=10
 
 
 \date{}
-\def\to{\rightarrow}
+\def\to{\longrightarrow}
 \def\imp{\shortrightarrow}
 \def\iff{\leftrightarrow}
 \def\union{\cup}
@@ -86,6 +86,8 @@ bookmarksopenlevel=10
 \def\ss{(**)}
 \def\ssn{(**_n)}
 \def\scop{\S^{\C^{op}}}
+\def\pr{^\prime}
+
 \def\PU{\mathcal P U}
 \def\P{\mathcal P}
 \def\UU{(U\to U)}
@@ -95,11 +97,15 @@ bookmarksopenlevel=10
 \def\cI{{I}}
 \def\cS{{S}}
 \def\cK{{K}}
-\def\app{\mathop{{}^\wr}\kern-1pt}
+\def\app{\mathop{{}^\wr}\kern-.8pt}
 \def\schon{Sch\"onfinkel}
 \newcommand\underrel[2]{\mathrel{\mathop{#2}\limits_{#1}}}
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
+\newcommand{\bes}{\begin{equation*}}
+\newcommand{\ees}{\end{equation*}}
+
+\def\eqx{\underrel{x}{=}}
 
 \makeatletter
 \newcommand*\dotop{\mathpalette\bigcdot@{.6}}
@@ -133,15 +139,16 @@ Our story begins in 1924, when \schon\ studied what would now be called an algeb
 a set $|A|$ equipped with a binary operation $\app$
 and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following identities:
 
-\begin{enumerate}
-\item[(1)] $\cI \app a = a$,
-
-\item[(2)] $(\cK \app a) \app b = a$,
-
-\item[(3)] $((\cS \app f) \app g) \app c = (f \app c) \app\, (g \app c)$,%
+\be
+\cI \app a = a,
+\ee
+\be
+(\cK \app a) \app b = a,
+\ee
+\be
+((\cS \app f) \app g) \app c = (f \app c) \app\, (g \app c),
 \footnote{Editor's note: Lambek uses this squiggle $\app$ to denote a binary operation for function application. It appears here and in his later book about this same subject. I made a best guess about how to translate this into \LaTeX.}
-
-\end{enumerate}
+\ee
 
 
 \noindent
@@ -151,16 +158,45 @@ Actually, \schon\ did not employ the language of universal algebra, and he defin
 \begin{prop}
 Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |A|$.
 \end{prop}
-Polynomials are of course formed as words in an indetermi­nate $x$ and are subject to the same three identities. More pre­cisely, equality $\underrel{x}{=}$ between polynomials is the smallest equi­valence relation $\equiv$ between words in $x$ which has the substitution property
+Polynomials are of course formed as words in an indeterminate $x$ and are subject to the same three identities. More precisely, equality $\eqx$ between polynomials is the smallest equivalence relation $\equiv$ between words in $x$ which has the substitution property
 
 \be
 \inferrule {\varphi(x) \equiv \psi(x) \qquad \alpha(x) \equiv \beta(x)}{\varphi(x) \app \alpha(x) \equiv \psi(x) \app \beta(x)}
  \tag{$0_{X}$} \\
 \ee
 and which satisfies
+\be
+\cI \app \alpha(x) \equiv \alpha(x),
+\tag{$1_X$}
+\ee
+\be
+\tag{$2_X$}
+(K \app \alpha(x))\app\,\beta(x) \equiv \alpha(x)
+\ee
+\be
+((S\app \varphi(x))\app \psi(x))\app \gamma(x) \equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
+\tag{$3_X$}
+\ee
+Alternatively, one may regard the polynomial $\varphi(x)$ as an
+element of the \schon\ algebra $A[x]$, which comes equipped
+with an element $x$ and with a homomorphism $h_x :A \to A[x]$ with
+the usual universal property: for every algebra $B$ every homomorphism
+$f: A \to B$ and every element $b\in |B|$, there exists a
+unique homomorphism $f\pr : A[x] \to B$ such that $f\pr h_x = f$ and $f\pr (x) = b$.
+In the special case when $B = A$ and $f$ is the identity homomorphism $A \to A$, $f\pr$ is the
+{\it substitution} homomorphism which allows us to replace $x$ in any polynomial by $b$.
+Similarly, when $B=A[x]$ and $f=h_x$, $f\pr$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
 
-
-
+The proof of Proposition 1 is remarkably simple. It proceeds by induction on the length of the word $\varphi(x)$,
+which must be either $x$, or a constant or of the form $\psi(x)\app \chi(x)$ not constant,
+in which last case we may assume by inductional assumption that $\psi(x) \eqx g \app x$ and
+$\chi(x) \eqx h \app x$. In the three cases we have
+\begin{align*}
+\varphi(x) &\eqx \cI \app x,\\
+\varphi(x) &\eqx (\cK \app a) \app x,\\
+\varphi(x) &\eqx (g \app x)\app (h \app x) \eqx ((S \app g) \app h) \app x,
+\end{align*}
+respectively.
 
 \begin{thebibliography}{888}
 
