--- a/lambek-1980-ccc/lambek-main.tex
+++ b/lambek-1980-ccc/lambek-main.tex
@@ -31,6 +31,14 @@
 \usepackage[small]{titlesec}
 \usepackage{cite}
 
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+\usepackage{amsthm}
+
+\newtheorem{theorem}{Theorem}
+\newtheorem{prop}[theorem]{Proposition}
+
+
 \usepackage[colorlinks=true
 ,breaklinks=true
 ,urlcolor=blue
@@ -43,15 +51,8 @@
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
-bookmarksopenlevel=10
+bookmarksopenlevel=10,
 }
-
-% make sure there is enough TOC for reasonable pdf bookmarks.
-\setcounter{tocdepth}{3}
-
-\newtheorem{theorem}{Theorem}
-\newtheorem{prop}[theorem]{Proposition}
-
 
 \date{}
 \def\to{\longrightarrow}
@@ -119,25 +120,37 @@ bookmarksopenlevel=10
 \begin{document}
 \maketitle
 {\centerline
-{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday\footnote{
-This is a remake of the paper {\it From $\l$-Calculus to Cartesian Closed Categories} originally published in R. Hindley and J. Seldin, 
-editors, {\it To H.B. Curry: Essays in Combinatory Logic, Lambda Calculus and Formalisms}. 
-Academic Press, 1980. This file was created in March 2023.}}}
-\bigskip\bigskip
+{\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday
+%
+\footnote{ This is a remake of the paper {\it From $\l$-Calculus to Cartesian Closed
+Categories} originally published in R. Hindley and J. Seldin, editors, {\it To H.B. Curry:
+Essays in Combinatory Logic, Lambda Calculus and Formalisms}. Academic Press, 1980. This
+file was created in March 2023.}}} \bigskip\bigskip
 
 \noindent
-Haskell Curry may be surprised to hear that he has spent a lifetime doing fundamental work in category theory. The purpose of this account is to convince categorists that Cartesian closed categories (Eilenberg and Kelly, 1966) have been anticipated by logicians (Curry, 1930) by many years and, conversely, to per­ suade logicians that combinatory logic may benefit from being phrased in categorical language.
+Haskell Curry may be surprised to hear that he has spent a lifetime doing fundamental work
+in category theory. The purpose of this account is to convince categorists that Cartesian
+closed categories (Eilenberg and Kelly, 1966) have been anticipated by logicians (Curry,
+1930) by many years and, conversely, to per­ suade logicians that combinatory logic may
+benefit from being phrased in categorical language.
 
-I have attempted to tell this story twice before (1972, 1974), but am not entirely satisfied with these earlier accounts. The present exposition is essentially my unscheduled talk at the 1977 Durham Symposium on applications of sheaf theory to logic, algebra and analysis.
+I have attempted to tell this story twice before (1972, 1974), but am not entirely
+satisfied with these earlier accounts. The present exposition is essentially my
+unscheduled talk at the 1977 Durham Symposium on applications of sheaf theory to logic,
+algebra and analysis.
 
-I regret that limitations of space do not permit a discus­ sion of illative combinatory logic (Curry and Feys, 1958) or combinatory type theory (Church, 1940) and applications thereof to the construction of free toposes.
+I regret that limitations of space do not permit a discus­ sion of illative combinatory
+logic (Curry and Feys, 1958) or combinatory type theory (Church, 1940) and applications
+thereof to the construction of free toposes.
 
-Let me confess at once that I am not a historical scholar
-and that I have taken some liberties with the original material. Thus, I have taken the opportunity to present the early discov­eries of combinatory logic in the language of universal algebra.
+Let me confess at once that I am not a historical scholar and that I have taken some
+liberties with the original material. Thus, I have taken the opportunity to present the
+early discov­eries of combinatory logic in the language of universal algebra.
 
-Our story begins in 1924, when \schon\ studied what would now be called an algebra $A = (|A|, \app, \cI, \cS, \cK)$ consisting of
-a set $|A|$ equipped with a binary operation $\app$
-and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following identities:
+Our story begins in 1924, when \schon\ studied what would now be called an algebra $A =
+(|A|, \app, \cI, \cS, \cK)$ consisting of a set $|A|$ equipped with a binary operation
+$\app$ and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following
+identities:
 
 \be
 \cI \app a = a,
@@ -146,10 +159,12 @@ and constants $\cI$, $\cS$ and $\cK$. These were to satisfy the following identi
 (\cK \app a) \app b = a,
 \ee
 \be
-((\cS \app f) \app g) \app c = (f \app c) \app\, (g \app c),
-\footnote{Editor's note: Lambek uses this squiggle $\app$ to denote a binary operation for function application. It appears here and in his later book about this same subject. I made a best guess about how to translate this into \LaTeX.}
+((\cS \app f) \app g) \app c = (f \app c) \app\, (g \app c), 
+%
+\footnote{Editor's note: Lambek uses this squiggle $\app$ to denote a binary operation for
+function application. It appears here and in his later book about this same subject. I
+made a best guess about how to translate this into \LaTeX.}
 \ee
-
 
 \noindent
 for all elements $a$, $b$, $c$, $f$ and $g$ of $|A|$.
@@ -158,34 +173,36 @@ Actually, \schon\ did not employ the language of universal algebra, and he defin
 \begin{prop}
 Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |A|$.
 \end{prop}
-Polynomials are of course formed as words in an indeterminate $x$ and are subject to the same three identities. More precisely, equality $\eqx$ between polynomials is the smallest equivalence relation $\equiv$ between words in $x$ which has the substitution property
 
-\be
+\noindent
+Polynomials are of course formed as words in an indeterminate $x$ and are subject to the same three identities. 
+More precisely, equality $\eqx$ between polynomials is the smallest equivalence relation $\equiv$ between words in $x$ which has the substitution property
+
+\bes
 \inferrule {\varphi(x) \equiv \psi(x) \qquad \alpha(x) \equiv \beta(x)}{\varphi(x) \app \alpha(x) \equiv \psi(x) \app \beta(x)}
- \tag{$0_{X}$} \\
-\ee
+\tag{$0_{X}$}
+\ees
 and which satisfies
-\be
+\bes
 \cI \app \alpha(x) \equiv \alpha(x),
 \tag{$1_X$}
-\ee
-\be
+\ees
+\bes
 \tag{$2_X$}
 (K \app \alpha(x))\app\,\beta(x) \equiv \alpha(x)
-\ee
-\be
+\ees
+\bes
 ((S\app \varphi(x))\app \psi(x))\app \gamma(x) \equiv (\varphi(x) \app \gamma(x)) \app \, (\psi(x) \app \gamma(x))
 \tag{$3_X$}
-\ee
-Alternatively, one may regard the polynomial $\varphi(x)$ as an
-element of the \schon\ algebra $A[x]$, which comes equipped
-with an element $x$ and with a homomorphism $h_x :A \to A[x]$ with
-the usual universal property: for every algebra $B$ every homomorphism
-$f: A \to B$ and every element $b\in |B|$, there exists a
-unique homomorphism $f\pr : A[x] \to B$ such that $f\pr h_x = f$ and $f\pr (x) = b$.
-In the special case when $B = A$ and $f$ is the identity homomorphism $A \to A$, $f\pr$ is the
-{\it substitution} homomorphism which allows us to replace $x$ in any polynomial by $b$.
-Similarly, when $B=A[x]$ and $f=h_x$, $f\pr$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
+\ees
+Alternatively, one may regard the polynomial $\varphi(x)$ as an element of the \schon\
+algebra $A[x]$, which comes equipped with an element $x$ and with a homomorphism $h_x :A
+\to A[x]$ with the usual universal property: for every algebra $B$ every homomorphism $f:
+A \to B$ and every element $b\in |B|$, there exists a unique homomorphism $f\pr : A[x] \to
+B$ such that $f\pr h_x = f$ and $f\pr (x) = b$. In the special case when $B = A$ and $f$
+is the identity homomorphism $A \to A$, $f\pr$ is the {\it substitution} homomorphism
+which allows us to replace $x$ in any polynomial by $b$. Similarly, when $B=A[x]$ and
+$f=h_x$, $f\pr$ allows us to replace $x$ by $a$ polynomial $\beta(x)$.
 
 The proof of Proposition 1 is remarkably simple. It proceeds by induction on the length of the word $\varphi(x)$,
 which must be either $x$, or a constant or of the form $\psi(x)\app \chi(x)$ not constant,
@@ -194,12 +211,61 @@ $\chi(x) \eqx h \app x$. In the three cases we have
 \begin{align*}
 \varphi(x) &\eqx \cI \app x,\\
 \varphi(x) &\eqx (\cK \app a) \app x,\\
-\varphi(x) &\eqx (g \app x)\app (h \app x) \eqx ((S \app g) \app h) \app x,
+\varphi(x) &\eqx (g \app x)\app (h \app x) \eqx ((\cS \app g) \app h) \app x,
+\label{foo}
 \end{align*}
 respectively.
 
-\begin{thebibliography}{888}
+This proof also yields an algorithm for converting every polynomial into the form $f \app x$.
+For example, one easily calculates
+$$
+x \app x \eqx ((\cS \app \cI) \app \cI) \app x.
+$$
+In 1930, \schon's result was rediscovered by Curry. However, Curry was interested in imposing an
+additional requirement:
+\be
+\hbox{\rm If } f\app x \eqx g \app x \hbox{\rm\ in\ } A[x] \hbox{\rm\ then } f= g\hbox{\rm\ in\ } A. \tag{4}
+\label{4}
+\ee
+For example, from
+$$
+((\cS \app \cK)\app I) \app x \eqx (\cK\app x)\app (\cI \app x) \eqx x \eqx \cI\app x
+$$
+one could use (4) to obtain $(\cS\app \cK) \app \cI = I$, which equation cannot be derived
+from (1) to (3) alone. In the same way, one could deduce that $(\cS\app \cK) \app \cK =
+\cI$. In fact, \schon\ originally defined $\cI$ by this equation. For reasons that will
+become clear later, we shall not follow him in this application of Occam's razor.
 
+While (4) does not have the form of an identity, by which I mean an equation prefixed by
+universal quantifiers, Curry discovered that it could be replaced by a finite number of
+equations. These were later simplified, and Rosenbloom lists four, one of which reads:
+$$
+(\cS \app ((\cS \app (\cK \app \cS)) \app \cK))\app\, (\cK\app \cI) = \cI.
+$$
+The reader will forgive us for not copying out the other three!
+
+By a {\it Curry algebra} we shall mean a \schon\ algebra subject to certain additional
+equations or identities whose conjunction is equivalent to (4). Curry's result may then be
+formulated thus:
+\begin{prop}
+Over a Curry algebra $A$ every polynomial $\varphi(x)$ may be uniquely written in the form
+$f\app x$ with $f \in |A|$.
+\end{prop}
+
+\noindent
+This property of Curry algebras is called {\it functional completeness}. It is an
+immediate consequence of the equivalence of (4) with the conjunction of the above
+mentioned four equations. For a proof we could refer the reader to the book by Rosenbloom.
+However, we prefer to give another proof, in the course of which we shall discover five
+equations whose conjunction is equivalent to (4).
+
+\begin{proof}
+blah
+\end{proof}
+\noindent
+hi there.
+
+\begin{thebibliography}{888}
 
 
 \end{thebibliography}
