--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -107,7 +107,25 @@ bookmarksopenlevel=10,
 \newcommand{\bes}{\begin{equation*}}
 \newcommand{\ees}{\end{equation*}}
 
-\def\eqx{\underrel{x}{=}}
+% makes "=" with "x" under it
+\makeatletter
+\DeclareRobustCommand{\eqx}{\mathrel{\mathpalette\eq@{x}}}
+\newcommand{\eq@}[2]{%
+  \vtop{\offinterlineskip
+    \ialign{\hfil##\hfil\cr
+      $\m@th#1=$\cr % top
+      \noalign{\sbox\z@{$\m@th#1\mkern0mu$}\kern-\wd\z@}
+      $\m@th\alexey@demote{#1}#2$\cr
+    }%
+  }%
+}
+\newcommand{\alexey@demote}[1]{%
+  \ifx#1\displaystyle\scriptstyle\else
+  \ifx#1\textstyle\scriptstyle\else
+  \scriptscriptstyle\fi\fi
+}
+\makeatother
+%\def\eqx{\underrel{x}{=}}
 
 \makeatletter
 \newcommand*\dotop{\mathpalette\bigcdot@{.6}}
