prop 2, rest of proof

--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -75,6 +75,7 @@ bookmarksopenlevel=10,
 \def\L{\Lambda}
 \def\l{\lambda}
 \def\lx{\lambda_x}
+\def\ly{\lambda_y}
 \def\lm#1.#2{\lambda#1.\, #2}
 \def\br#1{[\, #1 \, ]}
 \def\V{V}
@@ -109,6 +110,7 @@ bookmarksopenlevel=10,
 % makes "=" with "x" under it
 \makeatletter
 \DeclareRobustCommand{\eqx}{\mathrel{\mathpalette\eq@{x}}}
+\DeclareRobustCommand{\eqy}{\mathrel{\mathpalette\eq@{y}}}
 \newcommand{\eq@}[2]{%
   \vtop{\offinterlineskip
     \ialign{\hfil##\hfil\cr
@@ -318,9 +320,59 @@ an easy consequence of
 which itself has already been derived from (4).
 
 In the same manner we may obtain consequences (4.2) and (4.3)
-of (4) which imply ($2_X$) and ($3_X$) respectively. We shall not bother to spell them out.
+of (4) which imply ($2_X$) and ($3_X$) respectively.
+We shall not bother to spell them out.
+
+We now turn to the uniqueness of $f$ in Proposition 2.
+Suppose also $g\app x \eqx \varphi(x)$, we claim that $g = \lx \varphi(x)$.
+Now, by (*) $\lx (g\app x) = \lx \varphi(x)$, so it suffices to
+prove that $\lx (g\app x) = g$.
+
+Now a small calculation shows that $\lx (g\app x) = (\cS\app(\cK \app g))\app \cI$,
+so we require the identity
+$$
+(\cS\app (\cK\app g)) \app \cI = g
+$$
+for all $g$, which is an easy consequence of (4).
+
+This identity must remain valid if we adjoin an indeterminate
+$y$ to the algebra, so we have
+$$
+(\cS\app (\cK\app y)) \app \cI \eqy y.
+$$
+We may therefore replace the required identity by the equation
+\bes
+\ly (\cS\app (\cK\app y)) \app \cI = y.
+\tag{4.4}
+\ees
+Of course the A may be eliminated from this using (i) to (iii).
+
+It remains to show the validity of (iii) when $\psi(x) \app \chi(x)$ is
+constant, say $b\app c$. So we want to show that
+$$
+\lx (b\app c) = (\cS\app(\cK \app b))\app (\cK \app c).
+$$
+But, by (ii), $\lx(b\app c) = \cK \app (b\app c)$, so we are led to
+stipulate the identity
+$$
+(\cS\app (\cK \app b))\app (\cK \app c) = \cK \app (b\app c)
+$$
+for all $b$ and $c$. gain, this is an easy consequence of (4).
+By the same argument as above, we may replace the stipulated identity
+by the equation
+\bes
+\lx\ly ((\cS\app (\cK\app x))\app (\cK\app y))= \lx \ly (\cK\app (x\app y)).
+\tag{4.5}
+\ees
+The proof of Proposition 2 is now complete, provided we adopt
+(4.1) to (4.5) as the five equations which a Curry algebra must
+satisfy in addition to the identities (1) to (3).
 \end{proof}
-\noindent
+From now on we shall write $\lx \varphi(x)$ for the unique $f$ corresponding
+to $\varphi(x)$by Proposition 2, as we did in the proof. The properties of
+the new symbol $\lx$ are embodied in the $\lambda$-calculus of Church (1932).
+The equivalence of the systems of Curry and Church ($\lambda K$-calculus, 1941)
+are summed up as follows.
 
 \begin{thebibliography}{888}
 
