--- a/lambek-1980/lambek-main.tex
+++ b/lambek-1980/lambek-main.tex
@@ -138,6 +138,7 @@ bookmarksopenlevel=10,
 {\small\it Mathematics Department, McGill University} \\
 {\small\it Montreal, P.Q. HSA 2K63 Canada.}}
 \begin{document}
+\pdfbookmark{Introduction}{intro}
 \maketitle
 {\centerline
 {\small\it Dedicated to Professor H. B. Curry on the occasion of his 80th Birthday
@@ -189,6 +190,7 @@ made a best guess about how to translate this into \LaTeX.}
 for all elements $a$, $b$, $c$, $f$ and $g$ of $|A|$.
 Actually, \schon\ did not employ the language of universal algebra, and he defined $\cI$ in terms of $\cK$ and $\cS$, but of this we shall speak later. His main result would now be stated as follows.
 
+\pdfbookmark{Schonfinkel Algebra}{prop1}
 \begin{prop}
 Every polynomial $\varphi(x)$ over a \schon\ algebra $A$ can be written in the form $f \app x$, where $f \in |A|$.
 \end{prop}
@@ -261,6 +263,7 @@ $$
 $$
 The reader will forgive us for not copying out the other three!
 
+\pdfbookmark{Curry Algebra}{prop2}
 By a {\it Curry algebra} we shall mean a \schon\ algebra subject to certain additional
 equations or identities whose conjunction is equivalent to (4). Curry's result may then be
 formulated thus:
@@ -370,6 +373,7 @@ The proof of Proposition 2 is now complete, provided we adopt
 (4.1) to (4.5) as the five equations which a Curry algebra must
 satisfy in addition to the identities (1) to (3).
 \end{proof}
+\pdfbookmark{Lambda Calculus}{prop3}
 From now on we shall write $\lx \varphi(x)$ for the unique $f$ corresponding
 to $\varphi(x)$by Proposition 2, as we did in the proof. The properties of
 the new symbol $\lx$ are embodied in the $\lambda$-calculus of Church (1932).
@@ -394,6 +398,7 @@ $h\pr = h_x$ and $h\pr(x) = a$. This is of course the substitution
 homomorphism which replaces $x$ by $a$, hence yields the required equation from
 $f \app x \eqx \varphi(x)$.
 
+\pdfbookmark{Combinatory Logic}{combinator}
 To recapture the traditional terminology, let us mention that the theory of
 Curry algebras is called {\it combinatory logic}.
 Proposition 2 may then be compressed into the slogan:
